Remove tests etc, split Site class into another file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Theme Name: Site Theme
 */
