--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,45 +1,31 @@
-{% block html_head_container %}
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js no-svg ie ie6 lt-ie9 lt-ie8 lt-ie7" {{ site.language_attributes }}> <![endif]-->
+<!--[if IE 7]><html class="no-js no-svg ie ie7 lt-ie9 lt-ie8" {{ site.language_attributes }}> <![endif]-->
+<!--[if IE 8]><html class="no-js no-svg ie ie8 lt-ie9" {{ site.language_attributes }}> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js no-svg" {{ site.language_attributes }}><!--<![endif]-->
+    <head>
+        <meta charset="{{ site.charset }}">
+        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <link rel="author" href="{{ site.theme.link }}/humans.txt">
+        <link rel="pingback" href="{{ site.pingback_url }}">
+        <link href="http://gmpg.org/xfn/11" rel="profile">
+        {{ function('wp_head') }}
+        {% block head %}{% endblock %}
+    </head>
 
-{% include 'html-header.twig' %}
-	{% block head %}
-	{% endblock %}
-	</head>
-{% endblock %}
-
-	<body class="{{body_class}}" data-template="base.twig">
-		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
-		<header class="header" >
-			{% block header %}
-				<div class="wrapper">
-					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'menu': menu.get_items} %}
-					</nav><!-- #nav -->
-				</div>
+    <body class="{{ body_class }}">
+		<a href="{{ site.url }}" rel="home">{{ site.name }}</a>
+		<nav role="navigation" aria-label="Main navigation">
+			{% include "menu.twig" with {'menu': menu.get_items} only %}
+		</nav>
+        <main role="main">
+			{% block content %}
 			{% endblock %}
-		</header>
-
-		<section id="content" role="main" class="content-wrapper">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
-			<div class="wrapper {{sidebar_class}}">
-				{% block content %}
-					Sorry, no content
-				{% endblock %}
-			</div>
-			{% if sidebar %}
-				<aside class="layout-sidebar">
-					{{sidebar}}
-				</aside>
-			{% endif %}
-		</section>
-
-		{% block footer %}
-			<footer id="footer">
-				{% include 'footer.twig' %}
-			</footer>
-			{{ function('wp_footer') }}
-		{% endblock %}
-	</body>
+		</main>
+		<footer>
+		</footer>
+		{{ function('wp_footer') }}
+    </body>
 </html>
