--- a/templates/404.twig
+++ b/templates/404.twig
@@ -1,5 +1,5 @@
-{% extends "base.twig" %}
+{% extends "layout.twig" %}
 
-{% block content %}
+{% block main %}
 	Sorry, we couldn't find what you're looking for.
 {% endblock %}
