--- a/templates/page-plugin.twig
+++ b/templates/page-plugin.twig
@@ -1,5 +1,6 @@
-{% extends "base.twig" %}
+{# for buffered content from hijacked template plugins like WooCommerce (see header.php/footer.php) #}
+{% extends "layout.twig" %}
 
-{% block content %}
+{% block main %}
     {{ content }}
 {% endblock %}
