--- a/templates/partial/pagination.twig
+++ b/templates/partial/pagination.twig
@@ -1,60 +1,47 @@
 {% if posts.pagination.pages is not empty %}
-    <nav class="pagination-block">
-        <ul class="pagination">
+    <ul class="pagination">
+        <li class="pagination__item pagination__item--first">
             {% if pagination.pages|first and pagination.pages|first.current != true %}
-                <li class="first btn">
-                    <a href="{{ pagination.pages|first.link }}">First</a>
-                </li>
+                <a href="{{ pagination.pages|first.link }}" class="pagination__link">First</a>
             {% else %}
-                <li class="first btn disabled">
-                    <button disabled>First</button>
-                </li>
+                <span class="pagination__link pagination__link--disabled">First</span>
             {% endif %}
+        </li>
 
+        <li class="pagination__item pagination__item--prev">
             {% if pagination.prev %}
-                <li class="prev btn">
-                    <a href="{{ pagination.prev.link }}">Previous</a>
+                <a href="{{ pagination.prev.link }}" class="pagination__link">Previous</a>
+            {% else %}
+                <span class="pagination__link pagination__link--disabled">Previous</span>
+            {% endif %}
+        </li>
+
+        {% for page in pagination.pages %}
+            {% if page.link %}
+                <li class="pagination__item">
+                    <a href="{{ page.link }}" class="{{ page.class }}">{{ page.title }}</a>
                 </li>
             {% else %}
-                <li class="prev btn disabled">
-                    <button disabled>Previous</button>
+                <li class="pagination__item pagination__item--current">
+                    <span class="{{ page.class }} pagination__link pagination__link--disabled">{{ page.title }}</span>
                 </li>
             {% endif %}
+        {% endfor %}
 
-            {% for page in pagination.pages %}
-                {% if page.link %}
-                    <li>
-                        <a href="{{ page.link }}" class="{{ page.class }}">{{ page.title }}</a>
-                    </li>
-                {% else %}
-                    <li class="current">
-                        <span class="{{ page.class }}">{{ page.title }}</span>
-                    </li>
-                {% endif %}
-            {% endfor %}
-
+        <li class="pagination__item pagination__item--next">
             {% if pagination.next %}
-                <li class="next btn">
-                    <a href="{{ pagination.next.link }}">
-                        Next
-                    </a>
-                </li>
+                <a href="{{ pagination.next.link }}" class="pagination__link">Next</a>
             {% else %}
-                <li class="next btn disabled">
-                    <button disabled>
-                        Next
-                    </button>
-                </li>
+                <span class="pagination__link pagination__link--disabled">Next</span>
             {% endif %}
+        </li>
+
+        <li class="pagination__item pagination__item--last">
             {% if pagination.pages|last and pagination.pages|last.current != true %}
-                <li class="last btn">
-                    <a href="{{ pagination.pages|last.link }}">Last</a>
-                </li>
+                <a href="{{ pagination.pages|last.link }}" class="pagination__link">Last</a>
             {% else %}
-                <li class="last btn disabled">
-                    <button disabled>Last</button>
-                </li>
+                <span class="pagination__link pagination__link--disabled">Last</span>
             {% endif %}
-        </ul>
-    </nav>
+        </li>
+    </ul>
 {% endif %}
