--- a/templates/single-password.twig
+++ b/templates/single-password.twig
@@ -1,9 +1,11 @@
-{% extends "base.twig" %}
+{% extends "layout.twig" %}
 
-{% block content %}
-	<form class="password-form" action="{{site.site_url}}/wp-login.php?action=postpass" method="post">
-		<label for="pwbox-{{post.ID}}">Password:</label>
-		<input class="password-box" name="post_password" id="pwbox-{{post.ID}}" type="password" placeholder="Password" size="20" maxlength="20" />
-		<input class="password-btn" type="submit" name="Submit" value="Submit" />
-	</form>
+{% block main %}
+	<div class="passworded">
+		<form class="form passworded__form" action="{{ site.site_url }}/wp-login.php?action=postpass" method="POST">
+			<label class="form__label passworded__label" for="passworded-{{ post.id }}">Password:</label>
+			<input class="form__input passworded__input" name="post_password" id="passworded-{{ post.id }}" type="password" placeholder="Password" size="20" maxlength="20">
+			<button type="submit" class="form__btn passworded__btn">Submit</button>
+		</form>
+	</div>
 {% endblock %}
