--- a/templates/tease.twig
+++ b/templates/tease.twig
@@ -1,9 +1,7 @@
-<article class="tease tease-{{post.post_type}}" id="tease-{{post.ID}}">
-	{% block content %}
-		<h2 class="h2"><a href="{{post.link}}">{{post.title}}</a></h2>
-		<p>{{post.preview}}</p>
-		{% if post.get_thumbnail %}
-			<img src="{{post.thumbnail.src}}" />
-		{% endif %}
-	{% endblock %}
+<article class="tease">
+	<h2 class="tease__title"><a href="{{ post.link }}">{{ post.title }}</a></h2>
+	<p class="tease__preview">{{post.preview}}</p>
+	{% if post.get_thumbnail %}
+		<img src="{{ post.thumbnail.src }}" class="tease__image">
+	{% endif %}
 </article>
